push of recent changes:
issue 286: windows thread creation false positives: unaddr, uninit, and leaks
Fixed multiple false positives reported for each thread creation on Windows:
* set shadow defined for new thread TEB by querying post-NtCreateThread
  (TEB is allocated by kernel so we never see its allocation)
* set shadow unaddr for thread TEB dealloc on thread exit
* set full range of kernel-written stack on Ki routine
* set below-TOS to defined and beyond-TOS to unaddr in thread init,
  which required augmenting issue 117 to support getting
  the mcontext on (non-primary thread) thread init
* in DR r368: fixed bug in interception buffer mapping where the jmp back
  was also considered on the original app code side, causing the bb after
  an interception to be hidden from the client, resulting in false
  positives b/c Dr. Memory did not see some KiAPC code!
* set register shadow values based on NtContine CONTEXT
* suppressed RtlAllocateActivationContextStack leak that shows
  up with _beginthreadex() under the assumption that it's a false positive:
  but see Issue 8 where suppressed leaks still show up by default!
* fixed erroneous 1 arg listed for 0-arg windows syscalls: showed up
  as NtTestAlert uninit for new threads

other changes of note:
* fixed bug in reporting whether an unaddr error refers to the delayed free
  queue
* use disp instead of abs addr for shadow table: shrinks instrumentation size



SVN-Revision: 23

--- a/drmemory/docs/using.dox
+++ b/drmemory/docs/using.dox
@@ -31,6 +31,11 @@ following sub-sections:
  - \ref sec_windows
  - \ref sec_running
  - \ref sec_errors
+  - \ref sec_unaddr
+  - \ref sec_uninit
+  - \ref sec_invfree
+  - \ref sec_leaks
+  - \ref sec_warning
 
 See also the full reference of Dr. Memory's runtime options:
  - \ref page_options
@@ -150,6 +155,13 @@ installation.
 
 \endif
 
+When running scripts it is best to explicitly invoke the interpreter rather
+than invoking the script directly.  For example:
+
+\par
+<tt>~/DrMemory-\PLATFORM-\TOOL_VERSION-1/\FRONT_END_PATH -- /usr/bin/perl ./myscript.pl
+</tt>
+
 ********************
 \subsection sec_results Examining the Results
 
@@ -190,11 +202,6 @@ the log directories as sub-directories to aggregate all of them:
 \par
 <tt>~/DrMemory-\PLATFORM-\TOOL_VERSION-1/\FRONT_END_PATH -aggregate /parent/logdir/
 </tt>
-
-********************
-\subsection sec_leaks Leak Checking
-
-INCLUDEFILE leaks.dox.sub
 
 ********************
 \subsection sec_daemon Applications That Do Not Exit
@@ -421,6 +428,11 @@ Elapsed time = 0:00:00.263 in thread 19755
 0x08048691 <malloc+0x691> malloc!_start
     ??:0
 \endcode
+
+********************
+\subsection sec_leaks Memory Leaks
+
+INCLUDEFILE leaks.dox.sub
 
 ********************
 \subsection sec_warning Warning
