--- a/drmemory/docs/using.dox
+++ b/drmemory/docs/using.dox
@@ -1,5 +1,5 @@
 /* **********************************************************
- * Copyright (c) 2009 VMware, Inc.  All rights reserved.
+ * Copyright (c) 2009-2010 VMware, Inc.  All rights reserved.
  * **********************************************************/
 
 /* Dr. Memory: the memory debugger
@@ -128,6 +128,12 @@ If you want to run your application with stripped libraries or binaries and
 have the unstripped versions in separate locations, you can point at those
 locations using the \p DRMEMORY_LIB_PATH environment variable, which is a
 colon-separated list of directories.
+
+On Windows, when using static debug versions of msvcrt (e.g., building with
+the "/MTd" flag), if your application does not have symbols then Dr. Memory
+will not be able to identify and avoid conflicts with msvcrt's own heap
+debugging facilities, which may lead to false positives and/or false
+negatives.  Be sure to build with debugging information included.
 
 ********************
 \subsection sec_invocation Invoking Dr. Memory
