* Issue 8: turn "-check_leaks -possible_leaks" on by default * Issue 35: split pre and post checks properly w/ addressable   on pre and write on post if call succeeds.   For PORT_MESSAGE consider write param as max size uninit. * Bumped version to 1.3.0 since has new features
SVN-Revision: 41

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -59,8 +59,11 @@ The Dr. Memory distribution contains the following:
 
 The current version is \TOOL_VERSION.
 
-The changes between version 1.2.2 and 1.2.1 include:
+The changes between version 1.3.0 and 1.2.1 include:
+ - Enabled -check_leaks and -possible_leaks by default (Issue 8)
  - Improved suppression support: support for vertical wildcards "..."
+ - Locate target app on path on Linux (Issue 33)
+ - Various bug fixes
 
 The changes between version 1.2.1 and 1.2.0 include:
  - Fix bug in symbol lookup causing debug build asserts
