--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -58,6 +58,9 @@ The Dr. Memory distribution contains the following:
 \section sec_changes Changes Since Prior Releases
 
 The current version is \TOOL_VERSION.
+The changes between version 1.3.1 and 1.3.0 include:
+ - Performance improvements
+ - Various bug fixes
 
 The changes between version 1.3.0 and 1.2.1 include:
  - Enabled -check_leaks and -possible_leaks by default (Issue 8)
