--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 # **********************************************************
+# Copyright (c) 2010 Google, Inc.  All rights reserved.
 # Copyright (c) 2008-2009 VMware, Inc.  All rights reserved.
 # **********************************************************
 
@@ -45,13 +46,13 @@ browser at the drmemory/docs/html/index.html file.
 ===========================================================================
 Contact
 
-This project is provided as-is, with no official support from VMware.  Use
+This project is provided as-is, with no official support.  Use
 the Dr. Memory Users group at
 http://groups.google.com/group/drmemory-users/ to ask questions and seek
 help on using Dr. Memory.
 
-If you would like to submit a patch, you will need to first sign a Joint
-Copyright Assignment Agreement.  Send email to DrMemory at vmware dot com
-expressing interest in contributing source code for more information.
+If you would like to submit a patch, you will need to first sign a
+Contributor License Agreement.  See
+http://code.google.com/p/drmemory/wiki/Contributing for more information.
 
 ===========================================================================
