--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -62,6 +62,7 @@ The changes between version 1.4.0 and 1.3.1 include:
  - Initial Windows 7 support
  - Performance improvements
  - Various bug fixes
+ - Release build is used by default
 
 The changes between version 1.3.1 and 1.3.0 include:
  - Performance improvements
