--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -58,6 +58,10 @@ The Dr. Memory distribution contains the following:
 \section sec_changes Changes Since Prior Releases
 
 The current version is \TOOL_VERSION.
+The changes between version 1.4.1 and 1.4.0 include:
+ - Full Windows 7 support
+ - Various bug fixes
+
 The changes between version 1.4.0 and 1.3.1 include:
  - Initial Windows 7 support
  - Performance improvements
