update docs: switch to tree view; no more perl2exe; point at home page
SVN-Revision: 247

--- a/README
+++ b/README
@@ -51,6 +51,9 @@ the Dr. Memory Users group at
 http://groups.google.com/group/drmemory-users/ to ask questions and seek
 help on using Dr. Memory.
 
+Dr. Memory's source code and issue tracker live at
+http://code.google.com/p/drmemory/
+
 If you would like to submit a patch, you will need to first sign a
 Contributor License Agreement.  See
 http://code.google.com/p/drmemory/wiki/Contributing for more information.
