--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -59,6 +59,10 @@ The Dr. Memory distribution contains the following:
 \section sec_changes Changes Since Prior Releases
 
 The current version is \TOOL_VERSION.
+The changes between version 1.4.2 and 1.4.1 include:
+ - Initial graphical system call support to reduce false positives
+ - Various bug fixes
+
 The changes between version 1.4.1 and 1.4.0 include:
  - Full Windows 7 support
  - Various bug fixes
