fixes issue 557 improved callstack walking in presence of FPO + use shadow definedness info to rule out stale retaddrs + for each retaddr, disasm backward and check whether post-call   (any call: definedness makes that feasible)   (controlled by FP_SEARCH_DO_NOT_DISASM) + when scan, no longer look for fp,ra pairs: just look   for ra (controlled by FP_SEARCH_REQUIRE_FP) + when following fp,ra pairs b/c have valid fp,   check each ra for being post-call (controlled   by FP_DO_NOT_CHECK_RETADDR), but only after   having done a scan (FP_CHECK_RETADDR_PRE_SCAN)   b/c checking pre-scan is a 40% perf hit on   cfrac and roboop! + do check the very first retaddr since ebp might point at   a misleading stack slot (controlled by   FP_DO_NOT_CHECK_FIRST_RETADDR) + fix bug in fp,ra scan continuation + add notes on compiler flags for better callstacks
SVN-Revision: 476

--- a/drmemory/docs/using.dox
+++ b/drmemory/docs/using.dox
@@ -147,6 +147,13 @@ the redzone size.  The debug heap checks will mostly be disabled as they
 overlap and can conflict with Dr. Memory's checks.  It is recommended that
 the release version of the heap routines be used.
 
+You'll get better callstacks in error reports if you disable inlining.  For
+cl.exe, "/Ob0", or for gcc or g++, "-fno-inline".  Dr. Memory should be
+able to determine callstacks in the presence of frame pointer optimizations
+(FPO) in most cases, but if you see strange callstacks in an optimized
+applications consider disabling FPO: for cl.exe, "/Oy-"; for gcc or g++,
+"-fno-omit-frame-pointer".
+
 ********************
 \subsection sec_invocation Invoking Dr. Memory
 
