fixes issue 290 fixes issue 24 fixes issue 381 callstack formatting options + switched to a structured callstack format for more   flexibility wrt display and suppression + switched to a structured suppression format + rewrote suppression parser to map the file to avoid   doings its own buffering: requires DR i#542 + suppression parser now detects more errors because it   actually parses into fields (i#24) + added -callstack_style option that controls how callstacks   are printed, with control over which offsets are included,   frame numbers, whether file:line is on a new line, etc.,   and with file:line in [] and abs <mod+offs> in () + changed default callstack format to look like this:   # 0 suppress.exe!unaddr_test1                        [e:\derek\drmemory\git\src\tests\suppress.c:110] + trim trailing whitspace from supp frames (i#381) + require hex const for offs in docs and parser + updated postprocess.pl to match client code + updated heapstat parsing to support new format + make module name case-insensitive on windows in postprocess.pl
SVN-Revision: 485

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -59,6 +59,11 @@ The Dr. Memory distribution contains the following:
 \section sec_changes Changes Since Prior Releases
 
 The current version is \TOOL_VERSION.
+The changes between version 1.4.3 and 1.4.2 include:
+ - Changed the default callstack printing style and added control
+   over the style via the -callstack_style runtime option
+ - Various bug fixes
+
 The changes between version 1.4.2 and 1.4.1 include:
  - Initial graphical system call support to reduce false positives
  - Various bug fixes
